# barnacles

./: README.md  pyproject.toml
star/models/barnacle_finetuned/: config.json  thresholds.json
star/models/barnacle_v2_with_negatives/: thresholds.json
yolo/barnacle_dataset/: dataset.yaml
yolo/barnacle_dataset/labels/: train.cache  val.cache
yolo/barnacle_dataset/labels/train/: img0_tile_0000.txt  img0_tile_0001.txt  img0_tile_0002.txt  img0_tile_0003.txt  img0_tile_0004.txt  img0_tile_0005.txt  img0_tile_0008.txt  img0_tile_0009.txt  img0_tile_0010.txt  img0_tile_0011.txt  img0_tile_0012.txt  img0_tile_0014.txt  img0_tile_0015.txt  img0_tile_0016.txt  img0_tile_0017.txt  img0_tile_0018.txt  img0_tile_0021.txt  img0_tile_0023.txt  img0_tile_0024.txt  img0_tile_0025.txt  img0_tile_0026.txt  img0_tile_0027.txt  img0_tile_0028.txt  img0_tile_0029.txt  img0_tile_0031.txt  img0_tile_0032.txt  img0_tile_0033.txt  img0_tile_0034.txt  img0_tile_0035.txt  img0_tile_0037.txt  img0_tile_0038.txt  img0_tile_0039.txt  img0_tile_0040.txt  img0_tile_0042.txt  img0_tile_0045.txt  img0_tile_0046.txt  img0_tile_0047.txt  img0_tile_0048.txt  img1_tile_0000.txt  img1_tile_0001.txt  (+47 more)
yolo/barnacle_dataset/labels/val/: img0_tile_0006.txt  img0_tile_0007.txt  img0_tile_0013.txt  img0_tile_0019.txt  img0_tile_0020.txt  img0_tile_0022.txt  img0_tile_0030.txt  img0_tile_0036.txt  img0_tile_0041.txt  img0_tile_0043.txt  img0_tile_0044.txt  img1_tile_0011.txt  img1_tile_0018.txt  img1_tile_0022.txt  img1_tile_0024.txt  img1_tile_0032.txt  (+5 more)
yolo/barnacle_training/run/: args.yaml  results.csv
(+24 files in other folders)
