[project]
name = "barnacles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "albumentations>=2.0.8",
    "colab-ssh>=0.3.27",
    "csbdeep>=0.8.2",
    "gputools>=0.2.16",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.0",
    "opencv-python>=4.12.0.88",
    "sahi>=0.11.14",
    "scikit-learn>=1.8.0",
    "segment-anything>=1.0",
    "stardist>=0.9.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.238",
]
